--- a/lab2/social.css
+++ b/lab2/social.css
@@ -22,20 +22,20 @@ header h1 {
   font-style: normal;
 }
 
-section {
+.section {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-section li {
+.section li {
   font-size: larger;
   color: rgb(0, 85, 255);
   text-decoration: none;
   margin: 20px;
 }
 
-section a {
+.section a {
   font-size: 20px;
   color: black;
   text-decoration: none;
@@ -45,13 +45,13 @@ section a {
   font-style: normal;
 }
 
-section a:hover {
+.section a:hover {
   color: rgb(0, 64, 255);
   transition: 0.5s;
   font-size: 22px;
 }
 
-section li:hover {
+.section li:hover {
   color: rgb(0, 64, 255);
   transition: 0.5s;
   font-size: 22px;
@@ -64,7 +64,7 @@ section li:hover {
   margin: 30px 0 30px 0;
 }
 
-.btn {
+.back a {
   background-color: black;
   color: white;
   padding: 15px 50px;
@@ -76,7 +76,7 @@ section li:hover {
   font-style: normal;
 }
 
-.btn:hover {
+.back a:hover {
   opacity: 0.8;
   transition: 0.5s;
 }
